TinyYOLOHW_ex/imports/hls/prj/sol/.autopilot/db/TinyYOLOHW_cmodel.cpp.xilinx-performance-pragma-detector.err.log
In file included from /media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:20:
/media/ubuntu/T7/Xilinx-tools/2025.1/Vitis/common/technology/autopilot/ap_axi_sdata.h:362:5: error: use of undeclared identifier '__fpga_axis_pop'
    __fpga_axis_pop(V.get_data_ptr(), V.get_keep_ptr(), V.get_strb_ptr(),
    ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:36:60: note: in instantiation of member function 'hls::stream<hls::axis<ap_uint<512>, 0, 0, 0, '8', false>, 0>::read' requested here
     ap_axiu<INPUT_BITS,WUSER,WID,WDEST> streamin = s_axis.read();
                                                           ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:99:6: note: in instantiation of function template specialization 'read_stream<512, 512, 0, 0, 0>' requested here
     read_stream<INPUT_BITS,acc_bits,WUSER,WID,WDEST> (s_axis, acc);
     ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:141:3: note: in instantiation of function template specialization 'example_stream_plus1<512, 512, 0, 0, 0>' requested here
  example_stream_plus1<512,512,0,0,0> (axi_in,axi_out,32);
  ^
In file included from /media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:20:
/media/ubuntu/T7/Xilinx-tools/2025.1/Vitis/common/technology/autopilot/ap_axi_sdata.h:374:5: error: use of undeclared identifier '__fpga_axis_push'
    __fpga_axis_push(V.get_data_ptr(), V.get_keep_ptr(), V.get_strb_ptr(),
    ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:70:13: note: in instantiation of member function 'hls::stream<hls::axis<ap_uint<512>, 0, 0, 0, '8', false>, 0>::write' requested here
     m_axis.write(streamout);
            ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:101:6: note: in instantiation of function template specialization 'write_stream<512, 512, 0, 0, 0>' requested here
     write_stream<acc_bits,OUTPUT_BITS,WUSER,WID,WDEST> (acc, m_axis);
     ^
/media/ubuntu/T7/projects/arm-bharat/TinyYOLOHW_ex/imports/hls/../TinyYOLOHW_cmodel.cpp:141:3: note: in instantiation of function template specialization 'example_stream_plus1<512, 512, 0, 0, 0>' requested here
  example_stream_plus1<512,512,0,0,0> (axi_in,axi_out,32);
  ^
